--- a/src/component/arcupload.css
+++ b/src/component/arcupload.css
@@ -128,7 +128,7 @@ label::after{
   }
   .gallary_header {
     position: sticky;
-    top: 0;
+    top: -10px;
     width: 100%;
     z-index: 100;
     background-color: #363534;
@@ -136,7 +136,7 @@ label::after{
   
   .gallary_footer {
     position: sticky;
-    bottom: 0;
+    bottom: -12px;
     width: 100%;
     z-index: 100;
     background-color: #363534;
@@ -511,13 +511,17 @@ label::after{
         padding-bottom: 10px !important;
     }
     .ReactModal__Content  {
-        width: 60% !important;
+        width: 57% !important;
         height: 50vh !important;
         padding: 10px  !important;
+        
+    }
+    .ReactModal__Content .ali {
+        height: 40vh !important;
     }
     .model1_buttons{
             width:350px;
-            height:40px;
+            height:50px;
             background-color: #222222 !important;
             color:#f29122f1 !important;
             border:0px solid transparent !important;
